fix balloons sticking around on mobile

--- a/app/assets/stylesheets/questionnaire.scss
+++ b/app/assets/stylesheets/questionnaire.scss
@@ -153,3 +153,12 @@ form .likert-scale {
   position: relative;
   top: -4rem;
 }
+
+.range-field {
+  .thumb {
+    display: none;
+    &.active {
+      display: block;
+    }
+  }
+}
